# uv_sourcing_assistant_gradio

./: gradio_theme.py  main.py  pyproject.toml
tools/: craftapi.py
